--- a/src/components/calendar page/calendarPage.css
+++ b/src/components/calendar page/calendarPage.css
@@ -1,9 +1,54 @@
 table {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+thead{
+    width: 100%;
 }
 .table_head {
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.left_triangle {
+    margin-left: 15px;
+}
+.right_triangle{
+    margin-right: 15px;
+}
+.month_back, .month_forward {   
+    display: inline-table;
+    background: transparent;
+    cursor: pointer;
+    padding: 0;
+    width: 0;
+    height: 0;
+    border-top: 9px solid transparent;
+    border-bottom: 9px solid transparent;
+    transform: scale(1.7);
+}
+.month_back {
+    border-right: 9px solid black;
+}
+.month_forward {
+    border-left: 9px solid black;
+}
+.month_back:hover, .month_forward:hover {
+    transform: scale(2);
+    transition: all 0.3s ease-in-out;
+}
+.month_back:active, .month_forward:active {
+    transform: scale(1);
+    transition: all 0.2s ease-in-out;
+}
+.month_and_year {
+    font-size: 1.5rem;
 }
 th, td {
     padding: 10px;
+}
+.red{
+    color: red;
 }
